git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1149 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jgralab/README
+++ b/jgralab/README
@@ -4,7 +4,7 @@ use [[Language:TGraphs]] with [[Technology:JGraLab]] in [[Language:Java]]
 
 == Status ==
 
-101status:Featured
+[[101status:Featured]]
 
 == Motivation ==
 
