git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1150 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/cobol/README
+++ b/cobol/README
@@ -2,6 +2,10 @@
 
 a simple implementation in [[Language:Cobol]]
 
+== Status ==
+
+[[101status:Featured]]
+
 == Languages ==
 
 * [[Language:Cobol 85]]
