git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1152 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/ef/README
+++ b/ef/README
@@ -2,6 +2,10 @@
 
 object [[persistence]] and [[O/R mapping]] with [[Technology:.NET]] [[Technology:Entity Framework]]
 
+== Status ==
+
+[[101status:Featured]]
+
 == Languages ==
 * [[Language:CSharp]] (C#): Programming language used for all code (Version 4.0)
 
