git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1154 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/seaside/README
+++ b/seaside/README
@@ -1,6 +1,10 @@
 == Motivation ==
 
-A web-based implementation in [[Language:Smalltalk]]
+a web-based implementation in [[Language:Smalltalk]]
+
+== Status ==
+
+[[101status:Featured]]
 
 == Languages ==
 
