--- a/mobl/README
+++ b/mobl/README
@@ -1,5 +1,10 @@
-== Summary ==
+== Intent ==
+
 Implementation of 101 companies in mobl (http://mobl-lang.org). 
+
+== Status ==
+
+[[101status:Featured]]
 
 == Description == 
 
@@ -14,6 +19,7 @@ Main file is "companies.mobl"
 with meganalysis (as an model instance).
 
 == Requirements ==
+
 Requires the mobl Eclipse plug-in to be installed (from the update site: http://mobl-lang.org/update).
 
 == Demo ==
