git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1157 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/seaside/README
+++ b/seaside/README
@@ -23,6 +23,15 @@ a web-based implementation in [[Language:Smalltalk]]
 
 == Architecture ==
 
+Cut for the Departmnent
+
+<pre>
+cut
+	super cut.
+	manager cut.
+	employees do:[:each | each cut]
+</pre>
+
 == Usage ==
 
 * 1. Download Seaside for Pharo (http://www.seaside.st/download/pharo).
