git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1158 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/seaside/README
+++ b/seaside/README
@@ -23,14 +23,26 @@ a web-based implementation in [[Language:Smalltalk]]
 
 == Architecture ==
 
+<syntaxhighlight lang="smalltalk">
+cut
+	salary := salary / 2
+</syntaxhighlight>
+
 Cut for the Departmnent
 
-<pre>
+<syntaxhighlight lang="smalltalk">
 cut
 	super cut.
 	manager cut.
 	employees do:[:each | each cut]
-</pre>
+</syntaxhighlight>
+
+Total for the Department
+
+<syntaxhighlight lang="smalltalk">
+total
+	^self employees inject:((manager total) + (super total)) into:[:total :current | total + current total]
+</syntaxhighlight>
 
 == Usage ==
 
