git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1160 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/seaside/README
+++ b/seaside/README
@@ -23,6 +23,8 @@ a web-based implementation in [[Language:Smalltalk]]
 
 == Architecture ==
 
+== Illustration ==
+
 There is a basic OO implemenetation.
 
 Cut for the Employee
@@ -54,7 +56,7 @@ total
 </syntaxhighlight>
 
 
-The second part contains a web-implementation.
+The second part contains a layer of web-specific components.
 
 == Usage ==
 
