git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1181 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jdbc/README
+++ b/jdbc/README
@@ -34,8 +34,8 @@ Prerequisites:
   Corollary: tests will succeed at most once.
 
 - A suitable JDBC Driver for MySQL:
-  An appropriate driver is available through the project "library".
-  See the corresponding JAR in the build path of the present project. 
+  An appropriate driver is available here: http://dev.mysql.com/downloads/connector/j/
+  Add the JAR that comes with the download to the build path of this project.  
   
 == Contributors ==
 
