git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1189 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jdbc2/README
+++ b/jdbc2/README
@@ -28,7 +28,7 @@ The tests package ''org.softlang.tests'' contains test cases.
 
 Prerequisites (very much like in project "jdbc"):
 
-= Usage ==
+== Usage ==
 
 * You will need a suitable JDBC Driver for MySQL
 **  An appropriate driver is available here: http://dev.mysql.com/downloads/connector/j/
