--- a/jdbc/README
+++ b/jdbc/README
@@ -21,15 +21,14 @@ See the Tests class for test cases.
   
 == Usage ==
 
-* You will need a suitable JDBC Driver for MySQL
-**  An appropriate driver is available here: http://dev.mysql.com/downloads/connector/j/
-**  Add the JAR that comes with the download to the build path of this project.
+* You need a suitable JDBC Driver for MySQL
+** An appropriate driver is available here: http://dev.mysql.com/downloads/connector/j/
+** Some version of that driver is readily included into the project.
 * Set up a company database.
 ** Follow the steps described here [[101implementation:mySql]] to set up the company database. That is, stop after populating the tables. 
 * There are JUnit tests available as the package ''org.softlang.tests''.
 ** Run class ''Basics'' with JUnit to exercise basic features.
-  
-
+ 
 == Contributors ==
 
 * {{101contributor|Thomas Schmorleiz|developer}}
