git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1200 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hibernate/README
+++ b/hibernate/README
@@ -223,7 +223,7 @@ The modified state is committed; the test will only succeed once.
 
 Go to the database monitor and enter and execute "shutdown;".
 
-Quite the database monitor.
+Quit the database monitor.
 
 You may also want to run "make clean" in the root dir to be clean for next time.
 
