Clarified 101implementation:jdbc
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1204 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jdbc/README
+++ b/jdbc/README
@@ -15,9 +15,7 @@ Database programming with [[Technology:JDBC]]
 
 == Description ==
 
-We use JDBC/SQL for data processing. We exercise [[101feature:Total|totaling]] and [[101feature:Cut|cutting]] salaries as well as computing the [[101feature:Depth|depth]] of a company. 
-That is, we use embedded SQL in Java.
-See the Tests class for test cases.
+We use JDBC/SQL for data processing. That is, we use embedded SQL in Java. See the Tests class for test cases.
   
 == Usage ==
 
