git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1217 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/strutsAnnotation/README
+++ b/strutsAnnotation/README
@@ -1,8 +1,12 @@
+== Intent ==
+
+implement a web application with Struts
+
 == Usage ==
 	
 === Requirements ===
 	
-	        Any web server based on Servlet technology, such as Tomcat
+	        Any web server based on Servlet technology, such as Tomcat.
 	        
 === Build === 
 
@@ -14,4 +18,8 @@
 	        (a) start the web server
 	        
 	        (b) start a web browser and inform the URL http://localhost:8080/struts2app, if the web server is configured to accept requests on the 8080 port   
-	    
+
+== Contributors ==
+	   
+* {{101contributor|Rodrigo Bonifacio|developer}}
+ 
