git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1223 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5local/README
+++ b/html5local/README
@@ -1,6 +1,6 @@
 == Summary == 
 
-This is a simple implementation of the basic 101companies-features in html5.
+This is a simple implementation of the basic 101companies-features in html5. It provides client-side storage of the data without deleting it after closing the session. Apart from that, it is mostly identical to [[101implementation:html5session]].
 
 == Languages ==
 
@@ -15,9 +15,6 @@ This is a simple implementation of the basic 101companies-features in html5.
 * [[101feature:Company]]
 * [[101feature:Total]]
 * [[101feature:Cut]]
-
-== Motivation ==
-
 
 == Demo ==
 
