--- a/aspectJ/README
+++ b/aspectJ/README
@@ -112,7 +112,7 @@ package ''org.softlang.aspectj.tests'' hosts JUnit tests; see below.
 * The implementation is provided as an Eclipse project.
 * AJDT must be installed in Eclipse if Eclipse is to be used.
 * Open the project with Eclipse; this will also build the project.
-* There are JUnit tests available as the package ''org.softlang.java.tests''.
+* There are JUnit tests available as the package ''org.softlang.tests''.
 * Run class Tests with JUnit to exercise all features.
 
 == Contributors ==
