--- a/aspectJ/README
+++ b/aspectJ/README
@@ -105,7 +105,7 @@ Package ''org.softlang.aspectj'' hosts aspects for [[101feature:Total]],
 [[101feature:Cut]], [[101feature:Depth]], and [[101feature:Logging]]. There is 
 another aspect ''Polymorphism'' which rehashes existing operations (getName,
 total, cut) as an interface ''Operations'' on the relevant classes. Finally, 
-package ''org.softlang.aspectj.tests'' hosts JUnit tests; see below.
+package ''org.softlang.tests'' hosts JUnit tests; see below.
 
 == Usage ==
 
@@ -113,7 +113,7 @@ package ''org.softlang.aspectj.tests'' hosts JUnit tests; see below.
 * AJDT must be installed in Eclipse if Eclipse is to be used.
 * Open the project with Eclipse; this will also build the project.
 * There are JUnit tests available as the package ''org.softlang.tests''.
-* Run class Tests with JUnit to exercise all features.
+* Run class ''Operations'' with JUnit to exercise several operations.
 
 == Contributors ==
 
