--- a/javaRmi/README
+++ b/javaRmi/README
@@ -94,3 +94,4 @@ The policy is very permissive; see the wildcard.
 == Contributors ==
 
 * {{101contributor|Ralf Lämmel|developer}}
+* {{101contributor|Jürgen Starek|assistant}}
