git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1297 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5session/README
+++ b/html5session/README
@@ -1,6 +1,6 @@
-== Summary == 
+== Intent ==
 
-This is a simple implementation of the basic 101companies-features in html5. It provides client-side storage for the data, which are deleted after closing the session. Apart from that, it is mostly identical to [[101implementation:html5local]].
+[[web programming]] with [[Technology:HTML5]]
 
 == Languages ==
 
@@ -16,6 +16,10 @@ This is a simple implementation of the basic 101companies-features in html5. It 
 * [[101feature:Company]]
 * [[101feature:Total]]
 * [[101feature:Cut]]
+
+== Motivation == 
+
+This is a simple implementation of the basic 101companies-features in html5. It provides client-side storage for the data, which are deleted after closing the session. Apart from that, it is mostly identical to [[101implementation:html5local]].
 
 == Usage ==
 
