--- a/html5session/README
+++ b/html5session/README
@@ -19,7 +19,7 @@
 
 == Motivation == 
 
-This is a simple implementation of the basic 101companies-features in html5. It provides client-side storage for the data, which are deleted after closing the session. Apart from that, it is mostly identical to [[101implementation:html5local]].
+This is a simple implementation of the basic [[101section:Features|101companies-features]] in [[Language:HTML5|HTML5]]. It provides [[client-side storage]] for the data, which are deleted after closing the session. Apart from that, it is mostly identical to [[101implementation:html5local]].
 
 == Usage ==
 
