--- a/html5session/README
+++ b/html5session/README
@@ -21,6 +21,10 @@
 
 This is a simple implementation of the basic [[101section:Features|101companies-features]] in [[Language:HTML5|HTML5]]. It provides [[client-side storage]] for the data, which are deleted after closing the session. Apart from that, it is mostly identical to [[101implementation:html5local]].
 
+== Illustration ==
+
+== Architecture ==
+
 == Usage ==
 
 This HTML5-program does not work over file-protocol of the browser. 
