git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1318 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5session/README
+++ b/html5session/README
@@ -45,7 +45,7 @@ function Department (name) {
 }
 </syntaxhighlight>
 
-The data-structure is a tree, which can be traversed to cut salaries of the whole company or individual departments. The tree can be stringified with [[Technology:JSON|JSON]] and stored in the storage-object.
+The data-structure is a tree, which can be traversed to [[101feature:Cut|cut]] salaries or determine the [[101feature:Total|total]] of the whole company or individual departments. The tree can be stringified with [[Technology:JSON|JSON]] and stored in the storage-object.
 
 == Architecture ==
 
