git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1348 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5XMLHttpRequest/README
+++ b/html5XMLHttpRequest/README
@@ -10,7 +10,8 @@
 == Technologies ==
 
 * [[Technology:DOM]]
-* An HTML5-compliant browser
+* [[Technology:XMLHttpRequest]]
+* HTML5-compliant [[Technology:Browser|browser]]
 
 == Features ==
 
